Update frontend to connect to live backend on Render

--- a/web-dashboard/.env.production
+++ b/web-dashboard/.env.production
@@ -1,1 +1,1 @@
-NEXT_PUBLIC_API_URL=https://hawaii-emergency-backend.up.railway.app/api/v1
+NEXT_PUBLIC_API_URL=https://hawaii-emergency-hub.onrender.com/api/v1
